--- a/SiteMap/update.html
+++ b/SiteMap/update.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="../scripts/libs/jquery/3.2.1/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
         $("form").submit(function (event) {
