--- a/scripts/header.html
+++ b/scripts/header.html
@@ -1,6 +1,6 @@
 <link rel="shortcut icon" href="http://musicfamily.org/realm/Factions/picks/favicon.ico">
 <link rel="stylesheet" type="text/css" href="/realm/scripts/common.css"/>
-<script src="libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="/scripts/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="http://musicfamily.org/realm/scripts/jquery.style-my-tooltips.js"></script>
 <title>G00F's Not a Wiki </title>
